<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Instagram</string>

    <string name="action_configuraçoes">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_compartilhar">Compartilhar</string>
    <string name="hint_login_usuario">Digite seu usuário</string>
    <string name="hint_login_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="crie_conta">Não tem conta? Crie uma</string>
    <string name="cadastro_usuario_hint">Digite seu usuário</string>
    <string name="cadastro_email_hint">Digite seu email</string>
    <string name="cadastro_senha_hint">Digite sua senha</string>
    <string name="cadastro_botao">Cadastrar</string>
    <string name="cadastro_text_login">Já tem conta? Faça login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_usuarios">FeedUsuariosActivity</string>
</resources>
