<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.parse.starter.activity.CadastroActivity"
    android:background="@drawable/fundo_degrade"
    android:gravity="center_vertical|center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="113dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView2"
            android:background="@drawable/usuario" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="25dp"
            android:id="@+id/text_usuario"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/cadastro_usuario_hint"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/text_email"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/cadastro_email_hint"
            android:layout_below="@+id/text_usuario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/text_senha"
            android:layout_marginTop="10dp"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/cadastro_senha_hint"
            android:layout_below="@+id/text_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/cadastro_botao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_cadastrar"
            android:padding="16dp"
            android:background="@drawable/fundo_botao"
            android:textColor="@android:color/white"
            android:layout_below="@+id/text_senha"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/cadastro_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_faca_login"
            android:textColor="@android:color/white"
            android:layout_below="@+id/button_cadastrar"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

</RelativeLayout>
