<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fundo_degrade"
    android:gravity="center_vertical|center_horizontal"
    tools:context="com.parse.starter.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relatuve_layout_login">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView"
            android:background="@drawable/logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_login_usuario"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_login_usuario" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/edit_login_usuario"
            android:layout_alignRight="@+id/edit_login_usuario"
            android:layout_alignEnd="@+id/edit_login_usuario"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_login_senha"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_login_senha" />

        <Button
            android:text="@string/botao_logar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_login_senha"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/button_logar"
            android:background="@drawable/fundo_botao"
            android:textColor="@android:color/white"/>

        <TextView
            android:text="@string/crie_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_below="@+id/button_logar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:onClick="abrirCadastroUsuario" />
    </RelativeLayout>
</RelativeLayout>
